--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-multipart>=0.0.6
 PyJHora==4.5.5
 pyswisseph==2.10.3.2
 geocoder==1.38.1
+geopy>=2.3.0
 pytz==2025.2
 timezonefinder==8.2.0
 gunicorn>=21.0.0
