--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ PyJHora==4.5.5
 pyswisseph==2.10.3.2
 geocoder==1.38.1
 geopy>=2.3.0
+python-dateutil>=2.8.2
 pytz==2025.2
 timezonefinder==8.2.0
 gunicorn>=21.0.0
