--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ pyswisseph==2.10.3.2
 geocoder==1.38.1
 geopy>=2.3.0
 python-dateutil>=2.8.2
+pandas>=2.0.0
 pytz==2025.2
 timezonefinder==8.2.0
 gunicorn>=21.0.0
